<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/list_prod_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="#"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_numero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/txt_numero"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/txt_nombre"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_linea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_linea"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_existencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_existencia"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_pcosto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_pcosto"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_promedio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_ppromedio"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_pmenor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_pmenor"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/list_prod_pmayor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/prod_txt_pmayor"
            android:textColor="@color/black" />

    </TableRow>

</TableLayout>