<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.compra.AccionesCompraActivity">

    <Button
        android:id="@+id/actComp_btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_volver"
        android:textSize="24sp"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/actComp_btnModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_modificar"
            android:textSize="24sp"
            app:icon="@drawable/ic_editar" />

        <Button
            android:id="@+id/actComp_btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_eliminar"
            android:textSize="24sp"
            app:backgroundTint="@color/danger"
            app:icon="@drawable/ic_baseline_delete_forever_24" />

        <Button
            android:id="@+id/actComp_btnAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_aceptar"
            android:textSize="24sp"
            android:visibility="visible"
            app:icon="@drawable/ic_baseline_check_box_24" />

        <Button
            android:id="@+id/actComp_btnCancelar"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:textColor="@color/danger"
            android:textSize="24sp"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/txt_detalles"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actComp_btnVolver" />

    <TableLayout
        android:id="@+id/actComp_tbDatos1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/actComp_btnProv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtNo"
                android:text="@string/txt_numero"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtProveedor"
                android:text="@string/prov_clave"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtNombre"
                android:text="@string/txt_nombre"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtCalle"
                android:text="@string/txt_calle"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtCalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/actComp_btnProv"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtFecha"
                android:text="@string/cv_txt_fecha"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:editable="false"
                android:ems="10"
                android:focusable="false"
                android:importantForAutofill="no"
                android:inputType="none" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_spnFR"
                android:text="@string/cv_f_r"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/actComp_spnFR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:prompt="@string/seleccionar"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:labelFor="@id/actComp_edtFR"
                android:text="@string/cv_factura"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/actComp_edtFR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="number" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/actComp_btnProv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:text="@string/txt_buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actComp_tbDatos1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_clave" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_unidad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_linea" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_cantidad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vent_pventa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cv_txt_importe" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/compra_detalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="7"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="32dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:visibility="invisible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_clave" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_desc" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_unidad" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_linea" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_cantidad" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/vent_pventa" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:text="@string/cv_txt_importe" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end"
                android:text="@string/cv_txt_totalPares" />

            <TextView
                android:id="@+id/actComp_txtTPares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/cv_txt_suma" />

            <TextView
                android:id="@+id/actComp_txtSuma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="0.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:gravity="end"
                android:text="@string/cv_txt_iva" />

            <TextView
                android:id="@+id/actComp_txtIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="0.00" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:gravity="end"
                android:text="@string/cv_txt_total" />

            <TextView
                android:id="@+id/actComp_txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="0.00" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>